# challenge

./: .dockerignore  .editorconfig  .env  .env.example  .env_example  .example.env  .gitignore  .golangci.yml  Application.md  CLOUD.md  Challenge_Collection.postman_collection.json  DECISIONS.md  Dockerfile  Dockerfile.prod  FIRMWARE.md  GoLang.postman_collection.json  HISTORY.md  Makefile  README-V3.md  README.md  SUPPORT.md  appspec.yml  build.gradle  build.gradle.kts  buildspec.yml  compose.yaml  coverage.out  db.sqlite3  docker-compose.dev.test.yml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  dockerfile  entrypoint.sh  env-template.env  example.env  go.mod  go.sum  gps.go  gps_db.go  (+27 more)
ApiMobileV3/: A.java  pom.xml
api/: save_gps_data_handler.go  save_gyroscope_data_handler.go  save_photo_data_handler.go
app/: README.md  build.gradle  build.gradle.kts
cmd/: main.go
config/: env.go
configs/: config.go
core/: settings.py  urls.py
crypto/: crypto.go
db/: queries.sql
docs/: .env.example  01_arquitetura.md  02_operacao.md  03_backup.md  04_troubleshooting.md  05_seguranca.md  06_contribuicao.md  docs.go  endpoints.md  requisitos-para-desenvolver.md  status-de-implementacao.md  swagger.json  swagger.yaml
entity/: gps.go  gyroscope.go  photo.go
go_app/: main.go
gradle/: libs.versions.toml
handlers/: handlers.go  handlers_test.go
servidor/dispositivo_config/: Makefile  README.md  pyproject.toml
servidor/dispositivo_config/dispositivo_config/: api.py  main.py  schemas.py
servidor/dispositivo_config/tests/: test_api.py
(+682 files in other folders)
