[tool.poetry]
name = "dispositivo_config"
version = "0.1.0"
description = "API para configurar dispositivos V3"
authors = ["Guilherme Vasconcelos <guipontesvasconcelos122@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = "^0.27"
pydantic = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
black = "^24.0"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
